frontend/frontend-with-secret.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: k8s-example 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: brendanburns/journal-server:latest
        imagePullPolicy: Always
        name: frontend
        volumeMounts:
        - name: passwd-volume
          readOnly: true
          mountPath: "/etc/redis-passwd"
        resources:
          requests:
            cpu: "250m"
            memory: "64Mi"
          limits:
            cpu: "500m"
            memory: "128Mi"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - name: passwd-volume
          secret:
            secretName: redis-passwd
